# blade-spinning-cube

./: .gitignore  Cargo.toml  LICENSE  README.md
blade-asset/: Cargo.toml
blade-asset/src/: arena.rs  flat.rs
blade-graphics/: Cargo.toml
blade-graphics/src/: background_color_vulkan.rs  lib.rs  shader.rs  traits.rs  util.rs
blade-graphics/src/vulkan/: command.rs  init.rs  pipeline.rs  resource.rs  surface.rs
blade-graphics/tests/: init.rs
blade-macros/: Cargo.toml
blade-macros/tests/: main.rs
blade-util/: Cargo.toml
blade-util/src/: belt.rs  lib.rs
cube/: Cargo.toml
cube/src/: cube.wgsl  macros.rs  main.rs
